# goit-pythonweb-hw-12

./: .coverage  .example.env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 1928930ac54d_init.py  3806f779fd92_user_model_added.py  57009a565605_add_refresh_token_field.py  dec84a0b1ca9_add_roles.py
src/: main.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py  constants.py
src/database/: models.py
src/middlewares/: limiter.py
src/permissions/: role_access.py
src/repository/: contacts.py  users.py
src/schemas/: schemas.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
src/services/templates/: reset_password_email.html
tests/: conftest.py  constants.py
tests/intergation/: test_auth_flow_integration.py  test_contacts_flow_integration.py
tests/unit/api/auth/: ex.py  test_email_confirmation.py  test_login.py  test_refresh_token.py  test_registration.py  test_reset_password.py
tests/unit/api/contact/: test_contacts.py
tests/unit/api/user/: test_users.py
tests/unit/repository/: test_contacts.py  test_users.py
tests/unit/service/: test_auth_service.py  test_contacts_service.py  test_email_service.py  test_upload_file_service.py  test_users_service.py
tests/utils/: hash_password.py
